tests/should_succeed/array_add_int_double.jou
import "stdlib/io.jou"

def main() -> int:
    a: int[2] = [1, 2]
    b: double[2] = [0.5, 0.5]
    c = a + b
    printf("%f %f\n", c[0], c[1])  # Output: 1.500000 2.500000
    return 0
