tests/syntax_error/keyword_double.jou
def main() -> int:
    double = 1  # Error: expected an expression, got the 'double' keyword
    return 0
